--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
     }
     html,body{height:100%;margin:0;background: radial-gradient(1200px 600px at 10% 10%, rgba(96,165,250,0.06), transparent),
       radial-gradient(800px 400px at 90% 90%, rgba(110,231,183,0.04), transparent), linear-gradient(180deg,#071225 0%, #081224 100%);
-      color:#dbeafe;}
-    .wrap{max-width:1100px;margin:28px auto;padding:24px;display:grid;grid-template-columns:1fr 420px;gap:20px}
+      color:#dbeafe;overflow-x:hidden;}
+    .wrap{max-width:1100px;margin:28px auto;padding:16px;display:grid;grid-template-columns:1fr 420px;gap:20px}
 
-    header{grid-column:1/-1;display:flex;align-items:center;justify-content:space-between}
+    header{grid-column:1/-1;display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:10px}
     h1{margin:0;font-size:20px;letter-spacing:0.6px}
     .sub{color:#9fb4d8;font-size:13px}
 
-    .game{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:14px;padding:22px;box-shadow:0 6px 30px rgba(2,6,23,0.7);border:1px solid var(--glass-border)}
+    .game{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:14px;padding:16px;box-shadow:0 6px 30px rgba(2,6,23,0.7);border:1px solid var(--glass-border)}
     .left{display:flex;flex-direction:column;gap:18px}
 
-    .big-click{display:flex;align-items:center;justify-content:center;height:260px;border-radius:12px;background:linear-gradient(180deg,#071a34,#062233);border:1px solid rgba(255,255,255,0.04);cursor:pointer;position:relative;overflow:hidden}
-    .big-click:active{transform:scale(.995)}
+    .big-click{display:flex;align-items:center;justify-content:center;height:220px;border-radius:12px;background:linear-gradient(180deg,#071a34,#062233);border:1px solid rgba(255,255,255,0.04);cursor:pointer;position:relative;overflow:hidden}
+    .big-click:active{transform:scale(.98)}
     .big-click .pulse{position:absolute;width:600px;height:600px;border-radius:50%;left:50%;top:50%;transform:translate(-50%,-50%);background:radial-gradient(circle at center, rgba(96,165,250,0.08), transparent 20%);opacity:0;pointer-events:none}
-    .click-count{font-size:40px;font-weight:700;filter:drop-shadow(0 6px 18px rgba(3,7,18,0.8));}
+    .click-count{font-size:34px;font-weight:700;filter:drop-shadow(0 6px 18px rgba(3,7,18,0.8));}
     .click-sub{color:#93c5fd;font-weight:600}
 
     .stats{display:flex;gap:12px;flex-wrap:wrap}
-    .stat{background:var(--glass);padding:10px 14px;border-radius:10px;border:1px solid var(--glass-border);min-width:150px}
+    .stat{background:var(--glass);padding:10px 14px;border-radius:10px;border:1px solid var(--glass-border);flex:1;min-width:120px}
     .stat .label{font-size:12px;color:#9fb4d8}
     .stat .value{font-weight:700;margin-top:6px}
 
-    .shop{display:grid;grid-template-columns:repeat(2,1fr);gap:12px}
+    .shop{display:grid;grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:12px}
     .upgrade{background:linear-gradient(180deg, rgba(255,255,255,0.017), rgba(255,255,255,0.01));padding:12px;border-radius:10px;border:1px solid rgba(255,255,255,0.03);min-height:86px;position:relative;overflow:hidden}
     .upgrade.locked{filter:grayscale(.2) opacity:.54}
     .upgrade h3{margin:0;font-size:15px}
@@ -53,18 +53,28 @@
     footer{grid-column:1/-1;text-align:center;color:#9fb4d8;font-size:13px;margin-top:8px}
 
     /* modal */
-    .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:linear-gradient(180deg, rgba(2,6,23,0.6), rgba(2,6,23,0.9));z-index:40}
+    .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:linear-gradient(180deg, rgba(2,6,23,0.6), rgba(2,6,23,0.9));z-index:40;padding:10px}
     .modal.open{display:flex}
-    .modal-card{background:linear-gradient(180deg,#041627,#072238);padding:26px;border-radius:14px;text-align:center;max-width:720px;border:1px solid rgba(255,255,255,0.06)}
-    .modal h2{margin:0 0 6px 0;font-size:30px}
-    .modal p{margin:0 0 14px 0;color:#a7c1e9}
+    .modal-card{background:linear-gradient(180deg,#041627,#072238);padding:20px;border-radius:14px;text-align:center;max-width:95%;border:1px solid rgba(255,255,255,0.06)}
+    .modal h2{margin:0 0 6px 0;font-size:24px}
+    .modal p{margin:0 0 14px 0;color:#a7c1e9;font-size:14px}
 
     /* confetti */
     .confetti{position:absolute;inset:0;pointer-events:none;overflow:hidden}
     .confetti i{position:absolute;width:10px;height:16px;background:#fff;opacity:0;transform-origin:center;}
 
     /* responsive */
-    @media(max-width:980px){.wrap{grid-template-columns:1fr;}.right{order:2}}
+    @media(max-width:980px){.wrap{grid-template-columns:1fr}.right{order:2}}
+    @media(max-width:600px){
+      h1{font-size:18px;text-align:center}
+      .wrap{padding:12px}
+      .big-click{height:180px}
+      .click-count{font-size:26px}
+      .click-sub{font-size:13px}
+      .shop{grid-template-columns:1fr}
+      .stat{min-width:100px;padding:8px}
+      header{flex-direction:column;align-items:flex-start}
+    }
   </style>
 </head>
 <body>
