--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Stimulation Clicker — Подарок для Кости</title>
+  <title>Подарок для Кости</title>
   <style>
     :root{
       --bg:#0f1724; --card:#0b1220; --accent:#6ee7b7; --accent2:#60a5fa; --glass: rgba(255,255,255,0.04);
@@ -84,7 +84,6 @@
         <h1>Stimulation Clicker — подарок для <strong>Кости</strong></h1>
         <div class="sub">Добейся 1 000 000 кликов — получишь поздравление 🎉</div>
       </div>
-      <div class="sub">Работает без сервера — просто открой HTML (GitHub Pages OK)</div>
     </header>
 
     <main class="game left">
