--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     .shop{display:grid;grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:12px}
     .upgrade{background:linear-gradient(180deg, rgba(255,255,255,0.017), rgba(255,255,255,0.01));padding:12px;border-radius:10px;border:1px solid rgba(255,255,255,0.03);min-height:86px;position:relative;overflow:hidden}
-    .upgrade.locked{filter:grayscale(.2) opacity:.54}
+    .upgrade.locked{filter:grayscale(.2); opacity:(.54)}
     .upgrade h3{margin:0;font-size:15px}
     .up-desc{font-size:12px;color:#9fb4d8;margin-top:6px}
     .up-footer{position:absolute;right:10px;bottom:10px;display:flex;gap:6px;align-items:center}
@@ -155,7 +155,7 @@
       </div>
     </aside>
 
-    <footer>Сделано с любовью — открой этот файл в браузере и добавь на GitHub Pages как static HTML.</footer>
+    <footer>Сделал я, Марк! С ДР Костя (дойди до конца) !</footer>
   </div>
 
   <div class="modal" id="modal">
